feat: get product by id
